PO-2254 checkstyle and minor test updates